--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+	<link rel="icon" type="image/svg+xml" href="/images/3.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Tauri + React + Typescript</title>
+	<title>Lumi Servers Manager</title>
 </head>
 
 <body style="background-color: black;">
